--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "@types/mongoose": "^5.11.96",
     "autoexplorerts": "file:",
     "mongoose": "^8.6.1",
-    "next": "15.0.0",
+    "next": "^15.0.0",
     "react": "19.0.0-rc-65a56d0e-20241020",
     "react-dom": "19.0.0-rc-65a56d0e-20241020"
   },
