--- a/package.json
+++ b/package.json
@@ -17,14 +17,14 @@
     "react-dom": "19.0.0-rc-65a56d0e-20241020"
   },
   "devDependencies": {
-    "@types/node": "^20",
+    "@types/node": "20.17.1",
     "@types/react": "npm:types-react@19.0.0-rc.1",
     "@types/react-dom": "npm:types-react-dom@19.0.0-rc.1",
     "eslint": "^8",
     "eslint-config-next": "15.0.0",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "5.6.3"
   },
   "overrides": {
     "@types/react": "npm:types-react@19.0.0-rc.1",
